# llm-langchain-agent-with-tools

./: .gitignore  agent.py  database.py  document_handler.py  embedding.py  llm.py  main.py  memory.py  prompts.py  pyproject.toml  requirements.txt  setup.py  tools.py  utils.py
configs/: configs.py
setup/: agent.py  collection_utils.py  configs.py  constants.py  create_collections.py  create_research_collection.py  create_wikipedia_collection.py  embedding.py  llm.py  research_collect.py  setup.py  tools.py  utils.py  vector_store.py
